tests/out/error/struct/init.in.bt
struct FooBar{
	foo i32 := false
}

fb := FooBar{
	spam_eggs = 123
}
