tests/out/error/struct/init.out
tests/out/error/struct/init.in.bt:2:13 error: default value not matches field type i32
tests/out/error/struct/init.in.bt:5:7 error: struct FooBar has no field spam_eggs
